<resources>
    <string name="app_name">League</string>
    <string name="new_league">Новая лига</string>
    <string name="input_name_league">Введите название лиги:</string>
    <string name="league">Лига</string>
    <string name="cups">Cups</string>
    <string name="leagues">Leagues</string>
    <string name="teams">Teams</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_name_of_new_team">Enter name of new team</string>
    <string name="create_new_team">Create new Team</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="add_teams_to_league">Add teams to league</string>
    <string name="enter_league_name">Enter league name</string>
    <string name="create_new_league">Create new League</string>
    <string name="default_text">default</string>
    <string name="pick_teams">Pick teams</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="team_name">team_name</string>
    <string name="_10">10</string>
    <string name="_100">100</string>
    <string name="_63">63</string>
    <string name="diff">:</string>
    <string name="league_name">League_name</string>
    <string name="hash_tag">#</string>
    <string name="team">Team</string>
    <string name="grid">Grid</string>
    <string name="matches">Matches</string>
    <string name="players">Players</string>
</resources>