<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="8dp">

    <TextView
        android:id="@+id/titleTextCreateTEamFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_team"
        android:textSize="28sp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/teamNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:textCursorDrawable="@null"
        android:backgroundTint="@color/black"
        android:hint="@string/enter_name_of_new_team"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleTextCreateTEamFragment" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonApproved"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:layout_marginTop="8dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/teamNameEditText" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/buttonCancel"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cancel"
        android:textColor="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/buttonApproved"
        app:layout_constraintTop_toBottomOf="@+id/teamNameEditText" />
</androidx.constraintlayout.widget.ConstraintLayout>