<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:backgroundTint="@color/back_item_grid">

                <TextView
                    android:id="@+id/teamPosition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:text="@string/_10"
                    android:textColor="@color/black" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/nameTeam"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_margin="5dp"
                android:layout_marginStart="10dp"
                android:layout_weight="20"
                android:text="@string/team_name"
                android:textColor="@color/black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/gamesTeam"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/_100"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/goalsTeamWin"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/_63"
                android:textColor="@color/black" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/diff"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/goalsTeamLose"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="3dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="100"
                android:textColor="@color/black" />


            <TextView
                android:id="@+id/pointsTeam"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="3dp"
                android:layout_marginEnd="3dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="100"
                android:textColor="@color/black" />


        </LinearLayout>

    </com.google.android.material.card.MaterialCardView>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/back_item_grid"
        app:layout_constraintTop_toBottomOf="@+id/card" />


</androidx.constraintlayout.widget.ConstraintLayout>