<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragment_league_tournament_grid">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/back_item_grid">

            <TextView
                android:id="@+id/league_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:gravity="center"
                android:text="@string/league_name"
                android:textColor="@color/black"
                android:textSize="36sp" />
        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_stroke" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/back_item_grid">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:padding="3dp">

                <com.google.android.material.card.MaterialCardView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    app:strokeColor="@color/black"
                    android:backgroundTint="@color/back_item_grid"
                    app:strokeWidth="1dp">

                    <TextView
                        android:id="@+id/league_tournament_grid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="3dp"
                        android:layout_marginEnd="3dp"
                        android:padding="2dp"
                        android:text="@string/hash_tag"
                        android:textColor="@color/black" />
                </com.google.android.material.card.MaterialCardView>


                <TextView
                    android:id="@+id/team"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:layout_marginTop="3dp"
                    android:text="@string/team"
                    android:layout_weight="10"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/gamesTeam"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="GM"
                    android:textColor="@color/black" />


                <TextView
                    android:id="@+id/goalsTeamWin"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="Goal"
                    android:textColor="@color/black" />

                <TextView
                    android:id="@+id/pointsTeam"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="3dp"
                    android:layout_marginEnd="3dp"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="Pts"
                    android:textColor="@color/black" />
            </LinearLayout>

        </FrameLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/view_stroke" />

        <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/recyclerViewTournament">

        </androidx.recyclerview.widget.RecyclerView>


    </LinearLayout>

</FrameLayout>